<resources>
    <string name="app_name">GoalsOps</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="deadline">Deadline</string>
    <string name="deadline_">Deadline:</string>
    <string name="no_resolutions_yet">No resolutions yet?</string>
    <string name="add_resolution">Add Resolution</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="set_deadline_date">Set deadline date</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>

    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
</resources>